--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <project name="sqljet" default="deploy" xmlns:artifact="antlib:org.apache.maven.artifact.ant">
 
-	<property file="sqljet.build.properties"/>
+	<property file="sqljet.build.properties" />
 	<property name="build.vcs.number.1" value="local" />
 	<property name="build.number" value="${sqljet.version.major}.${sqljet.version.minor}.${sqljet.version.micro}.b${build.vcs.number.1}" />
 
@@ -81,13 +81,13 @@ public class SqlParser</replacevalue>
 		<mkdir dir="sqljet-test/bin" />
 
 		<javac destdir="sqljet/bin" srcdir="sqljet/src" debug="true">
-			<compilerarg value="-O"/>
+			<compilerarg value="-O" />
 			<classpath>
 				<fileset dir="lib" includes="*.jar" />
 			</classpath>
 		</javac>
 		<javac destdir="sqljet-test/bin" srcdir="sqljet-test/src" debug="true">
-			<compilerarg value="-O"/>
+			<compilerarg value="-O" />
 			<classpath path="sqljet/bin" />
 			<classpath>
 				<fileset dir="sqljet-test/lib" includes="*.jar" />
@@ -102,7 +102,7 @@ public class SqlParser</replacevalue>
 		<mkdir dir="sqljet-examples/inventory/bin" />
 
 		<javac destdir="sqljet-examples/browser/bin" srcdir="sqljet-examples/browser/src" debug="true">
-			<compilerarg value="-O"/>
+			<compilerarg value="-O" />
 			<classpath>
 				<fileset dir="lib" includes="*.jar" />
 				<fileset dir="sqljet-examples/browser/lib" includes="*.jar" />
@@ -110,14 +110,14 @@ public class SqlParser</replacevalue>
 			<classpath path="sqljet/bin" />
 		</javac>
 		<javac destdir="sqljet-examples/expenses/bin" srcdir="sqljet-examples/expenses/src" debug="true">
-			<compilerarg value="-O"/>
+			<compilerarg value="-O" />
 			<classpath path="sqljet/bin" />
 			<classpath>
 				<fileset dir="lib" includes="*.jar" />
 			</classpath>
 		</javac>
 		<javac destdir="sqljet-examples/inventory/bin" srcdir="sqljet-examples/inventory/src" debug="true">
-			<compilerarg value="-O"/>
+			<compilerarg value="-O" />
 			<classpath path="sqljet/bin" />
 			<classpath>
 				<fileset dir="lib" includes="*.jar" />
@@ -258,9 +258,9 @@ public class SqlParser</replacevalue>
 	<target name="deploy-maven" depends="clean,compile">
 		<path id="maven-ant-tasks.classpath" path="tools/maven-ant-tasks-2.0.10.jar" />
 		<typedef resource="org/apache/maven/artifact/ant/antlib.xml" uri="antlib:org.apache.maven.artifact.ant" classpathref="maven-ant-tasks.classpath" />
-		
-		<mkdir dir="build/maven-deploy"/>
-		<mkdir dir="build/maven-deploy/org.tmatesoft.sqljet-${build.number}"/>
+
+		<mkdir dir="build/maven-deploy" />
+		<mkdir dir="build/maven-deploy/org.tmatesoft.sqljet-${build.number}" />
 
 		<jar destfile="build/maven-deploy/org.tmatesoft.sqljet-${build.number}/sqljet-${build.number}.jar">
 			<fileset dir="sqljet/bin">
@@ -270,47 +270,47 @@ public class SqlParser</replacevalue>
 				<include name="sqljet.build.properties" />
 			</fileset>
 
-            <fileset dir="" >
-                <include name="COPYING" />
-            </fileset>
+			<fileset dir="">
+				<include name="COPYING" />
+			</fileset>
 		</jar>
 
 		<jar destfile="build/maven-deploy/org.tmatesoft.sqljet-${build.number}/sqljet-${build.number}-sources.jar">
-            <fileset dir="">
-                <include name="README.txt" />
-            </fileset>
-			<fileset dir="sqljet/src">
-				<exclude name=".svn"/>
-				<exclude name=".svn/**"/>
+			<fileset dir="">
+				<include name="README.txt" />
 			</fileset>
-			<fileset dir="" >
-                <include name="COPYING" />
-            </fileset>
-            <fileset dir="build" >
-                <include name="sqljet.build.properties" />
-            </fileset>
+			<fileset dir="sqljet/src">
+				<exclude name=".svn" />
+				<exclude name=".svn/**" />
+			</fileset>
+			<fileset dir="">
+				<include name="COPYING" />
+			</fileset>
+			<fileset dir="build">
+				<include name="sqljet.build.properties" />
+			</fileset>
 		</jar>
-		
-		<copy file="pom.xml" tofile="build/maven-deploy/org.tmatesoft.sqljet-${build.number}/pom.xml"/>
-        <replace token="%sqljet.version%" value="${build.number}" file="build/maven-deploy/org.tmatesoft.sqljet-${build.number}/pom.xml"/>
-		<replace token="%antlr.version%" value="${antlr.version}" file="build/maven-deploy/org.tmatesoft.sqljet-${build.number}/pom.xml"/>
+
+		<copy file="pom.xml" tofile="build/maven-deploy/org.tmatesoft.sqljet-${build.number}/pom.xml" />
+		<replace token="%sqljet.version%" value="${build.number}" file="build/maven-deploy/org.tmatesoft.sqljet-${build.number}/pom.xml" />
+		<replace token="%antlr.version%" value="${antlr.version}" file="build/maven-deploy/org.tmatesoft.sqljet-${build.number}/pom.xml" />
 
 		<artifact:pom id="sqljet.pom" file="build/maven-deploy/org.tmatesoft.sqljet-${build.number}/pom.xml" />
-		
-		<mkdir dir="build/maven-deploy/m2repo"/>
-		
+
+		<mkdir dir="build/maven-deploy/m2repo" />
+
 		<artifact:deploy file="build/maven-deploy/org.tmatesoft.sqljet-${build.number}/sqljet-${build.number}.jar">
 			<attach file="build/maven-deploy/org.tmatesoft.sqljet-${build.number}/sqljet-${build.number}-sources.jar" classifier="sources" />
 			<remoteRepository url="file://${basedir}/build/maven-deploy/m2repo" />
-			<pom refid="sqljet.pom"/>
+			<pom refid="sqljet.pom" />
 		</artifact:deploy>
 
-		<delete dir="build/maven-deploy" >
-			<include name="org.tmatesoft.sqljet-${build.number}/**"/>
-	    </delete>
+		<delete dir="build/maven-deploy">
+			<include name="org.tmatesoft.sqljet-${build.number}/**" />
+		</delete>
 		<delete dir="build/maven-deploy/org.tmatesoft.sqljet-${build.number}" />
 	</target>
-	
+
 	<target name="test" depends="deploy">
 		<echoproperties prefix="os." />
 		<echoproperties prefix="java.vm." />
@@ -340,17 +340,26 @@ public class SqlParser</replacevalue>
 			<sysproperty key="SqlJetBtreeTableTest.REPEATS_COUNT" value="100" />
 		</junit>
 	</target>
-	
-	<target name="benchmarks" depends="deploy">		
+
+	<target name="benchmarks" depends="deploy,benchmarks-server">
+		<junitreport todir="${benchmarks}">
+			<fileset dir="${benchmarks}">
+				<include name="TEST-*.xml" />
+			</fileset>
+			<report format="noframes" todir="${benchmarks.report}" />
+		</junitreport>
+	</target>
+
+	<target name="benchmarks-server" depends="deploy">
 		<echoproperties prefix="os." />
 		<echoproperties prefix="java.vm." />
-		
+
 		<echo>
-			*SQLJet ${build.number} (trunk)*
+			*SQLJet ${build.number} (trunk) -server*
 			
 			{{{
-		</echo>		
-		<junit>		
+		</echo>
+		<junit>
 			<jvmarg value="-server" />
 			<sysproperty key="SQLJET_TESTS_LOGGING" value="false" />
 			<sysproperty key="SqlJetBenchmark.TimeLog" value="false" />
@@ -358,8 +367,7 @@ public class SqlParser</replacevalue>
 			<classpath path="sqljet/bin" />
 			<classpath path="sqljet-test/bin" />
 			<classpath>
-				<fileset dir="sqljet-test/lib" includes="*.jar" 
-					excludes="sqlitejdbc-v056.jar" />
+				<fileset dir="sqljet-test/lib" includes="*.jar" excludes="sqlitejdbc-v056.jar" />
 				<fileset dir="lib" includes="*.jar" />
 			</classpath>
 			<formatter type="plain" usefile="false" />
@@ -374,11 +382,11 @@ public class SqlParser</replacevalue>
 		<echo>
 			}}}
 
-			*[http://www.zentus.com/sqlitejdbc/ SQLiteJDBC] v056 (SQLite 3.6.14.2 native)*
+			*[http://www.zentus.com/sqlitejdbc/ SQLiteJDBC] v056 (SQLite 3.6.14.2 native) -server*
 
 			{{{			
 		</echo>
-		<junit>		
+		<junit>
 			<jvmarg value="-server" />
 			<sysproperty key="SQLJET_TESTS_LOGGING" value="false" />
 			<sysproperty key="SqlJetBenchmark.TimeLog" value="false" />
@@ -386,8 +394,7 @@ public class SqlParser</replacevalue>
 			<classpath path="sqljet/bin" />
 			<classpath path="sqljet-test/bin" />
 			<classpath>
-				<fileset dir="sqljet-test/lib" includes="*.jar" 
-					excludes="sqlitejdbc-v056-pure.jar" />
+				<fileset dir="sqljet-test/lib" includes="*.jar" excludes="sqlitejdbc-v056-pure.jar" />
 				<fileset dir="lib" includes="*.jar" />
 			</classpath>
 			<formatter type="plain" usefile="false" />
@@ -402,11 +409,11 @@ public class SqlParser</replacevalue>
 		<echo>
 			}}}
 
-			*[http://www.zentus.com/sqlitejdbc/ SQLiteJDBC] v056 (NestedVM)*
+			*[http://www.zentus.com/sqlitejdbc/ SQLiteJDBC] v056 (NestedVM) -server*
 
 			{{{			
 		</echo>
-		<junit>		
+		<junit>
 			<jvmarg value="-server" />
 			<sysproperty key="SQLJET_TESTS_LOGGING" value="false" />
 			<sysproperty key="SqlJetBenchmark.TimeLog" value="false" />
@@ -414,8 +421,7 @@ public class SqlParser</replacevalue>
 			<classpath path="sqljet/bin" />
 			<classpath path="sqljet-test/bin" />
 			<classpath>
-				<fileset dir="sqljet-test/lib" includes="*.jar" 
-					excludes="sqlitejdbc-v056.jar" />
+				<fileset dir="sqljet-test/lib" includes="*.jar" excludes="sqlitejdbc-v056.jar" />
 				<fileset dir="lib" includes="*.jar" />
 			</classpath>
 			<formatter type="plain" usefile="false" />
@@ -426,18 +432,11 @@ public class SqlParser</replacevalue>
 				</fileset>
 			</batchtest>
 		</junit>
-		
+
 		<echo>
 			}}}
 		</echo>
 
-		<junitreport todir="${benchmarks}">
-			<fileset dir="${benchmarks}">
-				<include name="TEST-*.xml" />
-			</fileset>
-			<report format="noframes" todir="${benchmarks.report}" />
-		</junitreport>
-		
 	</target>
 
 	<target name="sandbox-test" depends="deploy">
@@ -458,7 +457,7 @@ public class SqlParser</replacevalue>
 			<sysproperty key="SQLJET_TESTS_LOGGING" value="false" />
 		</junit>
 	</target>
-	
+
 	<target name="sandbox-server-benchmarks" depends="deploy">
 		<junit>
 			<jvmarg value="-server" />
@@ -502,7 +501,7 @@ public class SqlParser</replacevalue>
 
 	<target name="sandbox-benchmarks" depends="deploy,sandbox-server-benchmarks,sandbox-client-benchmarks">
 		<echoproperties prefix="os." />
-		<echoproperties prefix="java.vm." />		
+		<echoproperties prefix="java.vm." />
 	</target>
 
 
