--- a/build.xml
+++ b/build.xml
@@ -256,6 +256,10 @@ public class SqlParser</replacevalue>
 	</target>
 
 	<target name="deploy-maven" depends="clean,compile">
+		<condition property="repo.path" value="${maven.repo.path}" else="/home/rsync/m2repo" >
+		    <isset property="maven.repo.path" />
+		</condition>
+		
 		<path id="maven-ant-tasks.classpath" path="tools/maven-ant-tasks-2.0.10.jar" />
 		<typedef resource="org/apache/maven/artifact/ant/antlib.xml" uri="antlib:org.apache.maven.artifact.ant" classpathref="maven-ant-tasks.classpath" />
 
@@ -301,7 +305,7 @@ public class SqlParser</replacevalue>
 
 		<artifact:deploy file="build/maven-deploy/org.tmatesoft.sqljet-${build.number}/sqljet-${build.number}.jar">
 			<attach file="build/maven-deploy/org.tmatesoft.sqljet-${build.number}/sqljet-${build.number}-sources.jar" classifier="sources" />
-			<remoteRepository url="file://${basedir}/build/maven-deploy/m2repo" />
+			<remoteRepository url="file://${repo.path}" />
 			<pom refid="sqljet.pom" />
 		</artifact:deploy>
 
