--- a/build.xml
+++ b/build.xml
@@ -256,10 +256,10 @@ public class SqlParser</replacevalue>
 	</target>
 
 	<target name="deploy-maven" depends="clean,compile">
-		<condition property="repo.path" value="${maven.repo.path}" else="/home/rsync/m2repo" >
-		    <isset property="maven.repo.path" />
+		<condition property="repo.path" value="${maven.repo.path}" else="/home/rsync/m2repo">
+			<isset property="maven.repo.path" />
 		</condition>
-		
+
 		<path id="maven-ant-tasks.classpath" path="tools/maven-ant-tasks-2.0.10.jar" />
 		<typedef resource="org/apache/maven/artifact/ant/antlib.xml" uri="antlib:org.apache.maven.artifact.ant" classpathref="maven-ant-tasks.classpath" />
 
@@ -505,5 +505,69 @@ public class SqlParser</replacevalue>
 		<echoproperties prefix="java.vm." />
 	</target>
 
+	<target name="compability" depends="deploy">
+
+		<tempfile prefix="sqljet" property="compability.file" deleteonexit="true" createfile="true">
+		</tempfile>
+
+		<parallel failonany="true" timeout="10000" threadCount="2">
+			<junit>
+				<sysproperty key="SQLJET_TESTS_LOGGING" value="false" />
+				<sysproperty key="sqljet.test.compability.file" value="${compability.file}" />
+				<classpath path="sqljet/bin" />
+				<classpath path="sqljet-test/bin" />
+				<classpath>
+					<fileset dir="sqljet-test/lib" includes="*.jar" excludes="sqlitejdbc-v056-pure.jar" />
+					<fileset dir="lib" includes="*.jar" />
+				</classpath>
+				<formatter type="plain" usefile="false" />
+				<test fork="true" name="org.tmatesoft.sqljet.compatibility.SQLiteLockingProcessesCompability$SuccessSQLite">
+				</test>
+			</junit>
+			<junit>
+				<sysproperty key="SQLJET_TESTS_LOGGING" value="false" />
+				<sysproperty key="sqljet.test.compability.file" value="${compability.file}" />
+				<classpath path="sqljet/bin" />
+				<classpath path="sqljet-test/bin" />
+				<classpath>
+					<fileset dir="sqljet-test/lib" includes="*.jar" excludes="sqlitejdbc-v056-pure.jar" />
+					<fileset dir="lib" includes="*.jar" />
+				</classpath>
+				<formatter type="plain" usefile="false" />
+				<test fork="true" name="org.tmatesoft.sqljet.compatibility.SQLiteLockingProcessesCompability$FailSQLJet">
+				</test>
+			</junit>
+		</parallel>
+
+		<parallel failonany="true" timeout="10000" threadCount="2">
+			<junit>
+				<sysproperty key="SQLJET_TESTS_LOGGING" value="false" />
+				<sysproperty key="sqljet.test.compability.file" value="${compability.file}" />
+				<classpath path="sqljet/bin" />
+				<classpath path="sqljet-test/bin" />
+				<classpath>
+					<fileset dir="sqljet-test/lib" includes="*.jar" excludes="sqlitejdbc-v056-pure.jar" />
+					<fileset dir="lib" includes="*.jar" />
+				</classpath>
+				<formatter type="plain" usefile="false" />
+				<test fork="true" name="org.tmatesoft.sqljet.compatibility.SQLiteLockingProcessesCompability$SuccessSQLJet">
+				</test>
+			</junit>
+			<junit>
+				<sysproperty key="SQLJET_TESTS_LOGGING" value="false" />
+				<sysproperty key="sqljet.test.compability.file" value="${compability.file}" />
+				<classpath path="sqljet/bin" />
+				<classpath path="sqljet-test/bin" />
+				<classpath>
+					<fileset dir="sqljet-test/lib" includes="*.jar" excludes="sqlitejdbc-v056-pure.jar" />
+					<fileset dir="lib" includes="*.jar" />
+				</classpath>
+				<formatter type="plain" usefile="false" />
+				<test fork="true" name="org.tmatesoft.sqljet.compatibility.SQLiteLockingProcessesCompability$FailSQLite">
+				</test>
+			</junit>
+		</parallel>
+
+	</target>
 
 </project>
