Incomplete - task 26: Test compability of locking with native client","Type-Task, Priority-Medium, 1.0.1, Milestone-Release1.0.1 http://code.google.com/p/sqljet/issues/detail?id=26
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@720 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/build.xml
+++ b/build.xml
@@ -521,7 +521,7 @@ public class SqlParser</replacevalue>
 					<fileset dir="lib" includes="*.jar" />
 				</classpath>
 				<formatter type="plain" usefile="false" />
-				<test fork="true" name="org.tmatesoft.sqljet.compatibility.SQLiteLockingProcessesCompability$SuccessSQLite">
+				<test fork="true" name="org.tmatesoft.sqljet.compatibility.SuccessSQLiteLockingCompability">
 				</test>
 			</junit>
 			<junit>
@@ -534,7 +534,7 @@ public class SqlParser</replacevalue>
 					<fileset dir="lib" includes="*.jar" />
 				</classpath>
 				<formatter type="plain" usefile="false" />
-				<test fork="true" name="org.tmatesoft.sqljet.compatibility.SQLiteLockingProcessesCompability$FailSQLJet">
+				<test fork="true" name="org.tmatesoft.sqljet.compatibility.FailSQLJetLockingCompability">
 				</test>
 			</junit>
 		</parallel>
@@ -550,7 +550,7 @@ public class SqlParser</replacevalue>
 					<fileset dir="lib" includes="*.jar" />
 				</classpath>
 				<formatter type="plain" usefile="false" />
-				<test fork="true" name="org.tmatesoft.sqljet.compatibility.SQLiteLockingProcessesCompability$SuccessSQLJet">
+				<test fork="true" name="org.tmatesoft.sqljet.compatibility.SuccessSQLJetLockingCompability">
 				</test>
 			</junit>
 			<junit>
@@ -563,7 +563,7 @@ public class SqlParser</replacevalue>
 					<fileset dir="lib" includes="*.jar" />
 				</classpath>
 				<formatter type="plain" usefile="false" />
-				<test fork="true" name="org.tmatesoft.sqljet.compatibility.SQLiteLockingProcessesCompability$FailSQLite">
+				<test fork="true" name="org.tmatesoft.sqljet.compatibility.FailSQLiteLockingCompability">
 				</test>
 			</junit>
 		</parallel>
