Incomplete - task 26: Test compability of locking with native client","Type-Task, Priority-Medium, 1.0.1, Milestone-Release1.0.1 http://code.google.com/p/sqljet/issues/detail?id=26
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@721 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/build.xml
+++ b/build.xml
@@ -553,19 +553,22 @@ public class SqlParser</replacevalue>
 				<test fork="true" name="org.tmatesoft.sqljet.compatibility.SuccessSQLJetLockingCompability">
 				</test>
 			</junit>
-			<junit>
-				<sysproperty key="SQLJET_TESTS_LOGGING" value="false" />
-				<sysproperty key="sqljet.test.compability.file" value="${compability.file}" />
-				<classpath path="sqljet/bin" />
-				<classpath path="sqljet-test/bin" />
-				<classpath>
-					<fileset dir="sqljet-test/lib" includes="*.jar" excludes="sqlitejdbc-v056-pure.jar" />
-					<fileset dir="lib" includes="*.jar" />
-				</classpath>
-				<formatter type="plain" usefile="false" />
-				<test fork="true" name="org.tmatesoft.sqljet.compatibility.FailSQLiteLockingCompability">
-				</test>
-			</junit>
+			<sequential>
+				<sleep milliseconds="50" />
+				<junit>
+					<sysproperty key="SQLJET_TESTS_LOGGING" value="false" />
+					<sysproperty key="sqljet.test.compability.file" value="${compability.file}" />
+					<classpath path="sqljet/bin" />
+					<classpath path="sqljet-test/bin" />
+					<classpath>
+						<fileset dir="sqljet-test/lib" includes="*.jar" excludes="sqlitejdbc-v056-pure.jar" />
+						<fileset dir="lib" includes="*.jar" />
+					</classpath>
+					<formatter type="plain" usefile="false" />
+					<test fork="true" name="org.tmatesoft.sqljet.compatibility.FailSQLiteLockingCompability">
+					</test>
+				</junit>
+			</sequential>
 		</parallel>
 
 	</target>
