--- a/build.xml
+++ b/build.xml
@@ -524,19 +524,22 @@ public class SqlParser</replacevalue>
 				<test fork="true" name="org.tmatesoft.sqljet.compatibility.SuccessSQLiteLockingCompability">
 				</test>
 			</junit>
-			<junit>
-				<sysproperty key="SQLJET_TESTS_LOGGING" value="false" />
-				<sysproperty key="sqljet.test.compability.file" value="${compability.file}" />
-				<classpath path="sqljet/bin" />
-				<classpath path="sqljet-test/bin" />
-				<classpath>
-					<fileset dir="sqljet-test/lib" includes="*.jar" excludes="sqlitejdbc-v056-pure.jar" />
-					<fileset dir="lib" includes="*.jar" />
-				</classpath>
-				<formatter type="plain" usefile="false" />
-				<test fork="true" name="org.tmatesoft.sqljet.compatibility.FailSQLJetLockingCompability">
-				</test>
-			</junit>
+			<sequential>
+				<sleep milliseconds="500" />
+				<junit>
+					<sysproperty key="SQLJET_TESTS_LOGGING" value="false" />
+					<sysproperty key="sqljet.test.compability.file" value="${compability.file}" />
+					<classpath path="sqljet/bin" />
+					<classpath path="sqljet-test/bin" />
+					<classpath>
+						<fileset dir="sqljet-test/lib" includes="*.jar" excludes="sqlitejdbc-v056-pure.jar" />
+						<fileset dir="lib" includes="*.jar" />
+					</classpath>
+					<formatter type="plain" usefile="false" />
+					<test fork="true" name="org.tmatesoft.sqljet.compatibility.FailSQLJetLockingCompability">
+					</test>
+				</junit>
+			</sequential>
 		</parallel>
 
 		<parallel failonany="true" timeout="10000" threadCount="2">
@@ -554,7 +557,7 @@ public class SqlParser</replacevalue>
 				</test>
 			</junit>
 			<sequential>
-				<sleep milliseconds="50" />
+				<sleep milliseconds="500" />
 				<junit>
 					<sysproperty key="SQLJET_TESTS_LOGGING" value="false" />
 					<sysproperty key="sqljet.test.compability.file" value="${compability.file}" />
