26: Test compability of locking with native client","Type-Task, Priority-Medium, 1.0.1, Milestone-Release1.0.1 http://code.google.com/p/sqljet/issues/detail?id=26
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@723 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/build.xml
+++ b/build.xml
@@ -340,6 +340,8 @@ public class SqlParser</replacevalue>
 			<sysproperty key="SqlJetBtreeTableTest.DELETE_COPY" value="true" />
 			<sysproperty key="SqlJetBtreeTableTest.REPEATS_COUNT" value="100" />
 		</junit>
+		<antcall target="compability">
+		</antcall>
 	</target>
 
 	<target name="benchmarks" depends="deploy,benchmarks-server">
@@ -505,7 +507,7 @@ public class SqlParser</replacevalue>
 		<echoproperties prefix="java.vm." />
 	</target>
 
-	<target name="compability" depends="deploy">
+	<target name="compability">
 
 		<tempfile prefix="sqljet" property="compability.file" deleteonexit="true" createfile="true">
 		</tempfile>
