26: Test compability of locking with native client","Type-Task, Priority-Medium, 1.0.1, Milestone-Release1.0.1 http://code.google.com/p/sqljet/issues/detail?id=26
file-based synchronization between processes in tests - workaround for ant < 1.7.1

git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@733 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/build.xml
+++ b/build.xml
@@ -509,8 +509,8 @@ public class SqlParser</replacevalue>
 		<echoproperties prefix="java.vm." />
 	</target>
 
-	<target name="compability" depends="deploy,compability-nodeploy"/>
-	
+	<target name="compability" depends="deploy,compability-nodeploy" />
+
 	<target name="compability-nodeploy">
 
 		<tempfile prefix="sqljet" property="compability.file" deleteonexit="true" />
@@ -552,11 +552,8 @@ public class SqlParser</replacevalue>
 		</macrodef>
 
 		<macrodef name="notify-semaphore">
-			<attribute name="semaphore" default="${compability.semaphore}" />
-			<attribute name="create" default="true" />
-			<attribute name="value" default="0" />
 			<sequential>
-				<truncate file="@{semaphore}" create="@{create}" length="@{value}" />
+				<run-test name="org.tmatesoft.sqljet.compatibility.SemaphoreResetLockingCompability" />
 			</sequential>
 		</macrodef>
 
