build.xml: test-stress target added for long running tests tests: repcachetest keeps its data compressed, minor fixes in test utility code.
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@749 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/build.xml
+++ b/build.xml
@@ -347,6 +347,37 @@ public class SqlParser</replacevalue>
 
 	</target>
 
+	<target name="test-stress" depends="deploy">
+		<echoproperties prefix="os." />
+		<echoproperties prefix="java.vm." />
+		<junit>
+			<jvmarg value="-ea" />
+			<jvmarg value="-server" />
+			<formatter type="plain" usefile="false" />
+			<classpath path="sqljet/bin" />
+			<classpath path="sqljet-test/bin" />
+			<classpath>
+				<fileset dir="sqljet-test/lib" includes="*.jar" />
+				<fileset dir="lib" includes="*.jar" />
+			</classpath>
+			<batchtest fork="yes" todir="sqljet-test/bin">
+				<fileset dir="sqljet-test/src">
+					<include name="**/*Stress*.java" />
+					<exclude name="**/*Abstract*.java" />
+					<exclude name="**/*Mock*.java" />
+					<exclude name="**/*sandbox*/**/**.*" />
+				</fileset>
+			</batchtest>
+			<sysproperty key="SQLJET_TESTS_LOGGING" value="false" />
+			<sysproperty key="SqlJetBtreeTableTest.DELETE_COPY" value="true" />
+			<sysproperty key="SqlJetBtreeTableTest.REPEATS_COUNT" value="100" />
+		</junit>
+
+		<antcall target="compability-nodeploy">
+		</antcall>
+
+	</target>
+
 	<target name="benchmarks" depends="deploy,benchmarks-server">
 		<junitreport todir="${benchmarks}">
 			<fileset dir="${benchmarks}">
