26: Test compability of locking with native client","Type-Task, Priority-Medium, 1.0.1, Milestone-Release1.0.1 http://code.google.com/p/sqljet/issues/detail?id=26
finished primary set of tests

git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@757 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/build.xml
+++ b/build.xml
@@ -587,6 +587,8 @@ public class SqlParser</replacevalue>
 			</sequential>
 		</macrodef>
 
+		<run-test name="org.tmatesoft.sqljet.compatibility.CompabilityLockingSetUpDb" />
+
 		<!-- compability.tests -->
 
 		<echo>Write lock SQLite - Write lock SQLJet</echo>
@@ -637,8 +639,6 @@ public class SqlParser</replacevalue>
 			</sequential>
 		</parallel>
 
-		<!--
-		
 		<echo>Write lock SQLJet - Read lock SQLite</echo>
 		<notify-semaphore />
 		<parallel failonany="true" timeout="${compability.timeout}" threadCount="2">
@@ -663,7 +663,6 @@ public class SqlParser</replacevalue>
 			</sequential>
 		</parallel>
 		
-		 -->
 		
 		<delete file="${compability.file}" />
 		<delete file="${compability.semaphore}" />
